# thinker

./: .env  .gitignore  README.md  config.py  deneme.py  pyproject.toml
app/: config.py  hash.py  main.py
app/backend/: database.py  user_roles.py
app/backend/models/: conversation.py  imports.py  summary.py  user.py
app/backend/routers/: model_router.py
app/backend/schemas/: conversation.py  sign_up.py
app/backend/services/: model_service.py  token_generator.py
app/frontend/: callbacks.py  constants.py  frontend_main.py  initializing_params.py
app/model/: async_agent_executor.py  db_cache.py  models.py  queue_callback_handler.py
app/model/chains/: agent_router.py  memory_chains.py  raw_chains.py
app/model/memory/: custom_conversational_buffer_window_memory.py  custom_conversational_summary_buffer_memory.py
app/model/prompts/: base_prompts.py
app/model/runner/: agent_router.py  agent_router_new.py  all_agent_nodes.py  async_agent_executor.py  queue_callback_handler.py
app/model/tools/: agents_and_tools.py  database_analysis_tools.py  database_visualization_tools.py  global_tools.py  tool_list.py  utility_tools.py
app/model/tools/database_analysis_tools/: get_correlation.py  get_median_mean_std_var_min_max_mode.py
app/model/tools/database_visualization_tools/: bar_plot_tool.py  box_plot_tool.py  heatmap_plot_tool.py  helper_functions.py  line_plot_tool.py  pie_plot_tool.py  scatter_plot_tool.py  violin_plot_tool.py  visualization_imports.py
app/model/tools/database_visualization_tools/database_visualization_dependent_tools/: bar_plot_dependent_tool.py  box_plot_dependent_tool.py  heatmap_plot_dependent_tool.py  line_plot_dependent_tool.py  pie_plot_dependent_tool.py  scatter_plot_dependent_tool.py
app/model/tools/global_tools/: final_answer.py  load_db.py
app/model/tools/math_tools/: arithmetic_calculations.py
app/model/tools/pdf_tools/: pdf_tools.py
app/model/tools/utility_tools/: get_current_time.py  get_location.py  search_on_web.py
app/model/utils/: prompt_utils.py  typed_dictionaries.py
csv_file_here/: titanic.csv
