[project]
name = "thinker"
version = "1.0.0"
description = "Database analysis and Visualization agent "
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",

    #langchain for creating agent and executing
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.5",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",

    #for tracing our agent workflow
    "langsmith>=0.1.139",

    #to create multiple agent workflows
    "langgraph",

    #data analysis libraries
    "pandas",
    "dask[complete]",
    "pyarrow",

    #visualization libraries
    "matplotlib",
    "seaborn",

    #frontend
    "streamlit"


]
[tool.streamlit]
package-mode = false


[project.optional-dependencies]
dev = ["ipdb" , "grandalf"]
