[tool.poetry]
name = "thinker"
version = "1.0.0"
description = "Conversational AI project with multiple AI agents like pdf agents , word , docs and some agents for data analysis and visualization "
readme = "README.md"
authors = []
license = ""


packages = [
    { include = "app" }
]


[tool.poetry.dependencies]
python = ">=3.12.7"

ipykernel = ">=6.29.5"

# langchain for creating agent and executing
"langchain-core" = ">=0.3.15"
"langchain-openai" = ">=0.2.5"
"langchain-community" = ">=0.3.5"
langchain = ">=0.3.7"

# for tracing our agent workflow
langsmith = ">=0.1.139"

# to create multiple agent workflows
langgraph = "*"

# data analysis libraries
pandas = "*"
"dask[complete]" = { version = "*", extras = ["complete"] } # Dask'ın extra bağımlılık tanımı
pyarrow = "*"

# visualization libraries
matplotlib = "*"
seaborn = "*"

# frontend
streamlit = "*"


[tool.poetry.group.dev.dependencies]
ipdb = "*"
grandalf = "*"

# Streamlit ayarı, eğer kullanmaya devam etmek istiyorsanız.
[tool.streamlit]
package-mode = false